--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -119,7 +119,7 @@ main{
     justify-content: space-between;
     align-items: center;
 }
-.block-input__footer button{
+button{
     font-family: var(--fontBody);
     padding: 5px;
     border-radius: 10px;
@@ -128,19 +128,19 @@ main{
     cursor: pointer;
     margin: 5px;
 }
-.block-input__footer .encrypt{
+.block-input__footer #encrypt{
     color: var(--bgColor);
     background: var(--linkColor);
 }
-.block-input__footer .encrypt:hover{
+.block-input__footer #encrypt:hover{
     background-color: var(--hover);
 }
-.block-input__footer .decrypt{
+.block-input__footer #decrypt{
     color: var(--linkColor);
     background: var(--bgShow);
     border: 1px solid var(--linkColor);
 }
-.block-input__footer .decrypt:hover{
+.block-input__footer #decrypt:hover{
     color: var(--hover);
     border: 1px solid var(--hover);
 }
@@ -150,7 +150,7 @@ main{
     height: 500px;
     box-shadow: 1px 1px 10px #2c277633;
 }
-.block-show__text{
+#block-show__text{
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -163,7 +163,7 @@ main{
     transform: translateY(-10px);
     animation: floating 5s infinite;
 }
-.block-show__text .show_txt{
+#block-show__text .show_txt{
     color: var(--fontColor);
     font-size: 25px;
     font-weight: 700;
@@ -171,6 +171,13 @@ main{
     resize: none;
     width: 100%;
     text-align: center;
+}
+#block-show__text #copy{
+    color: var(--bgColor);
+    background-color: var(--hover);
+}
+#block-show__text #copy:hover{
+    background-color: var(--fontColor);
 }
 /* ----- FOOTER ----------------------------- */
 footer{
