--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -172,11 +172,12 @@ button{
     width: 100%;
     text-align: center;
 }
-#block-show__text #copy{
+#block-show__text #btnCopy{
     color: var(--bgColor);
     background-color: var(--hover);
+    display: none;
 }
-#block-show__text #copy:hover{
+#block-show__text #btnCopy:hover{
     background-color: var(--fontColor);
 }
 /* ----- FOOTER ----------------------------- */
